@@ -1,5 +1,6 @@
 0.03
  - Improve width of output image for EXAMPLE section in doc.
+ - Update Module::Install to 1.16 version.
 
 0.02 2014-12-23T14:57:31+01:00
  - Add output image for EXAMPLE section in doc to html doc.
